--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,7 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
+
+.jumbotron {
+  background-color: rgb(129, 144, 102);
+}
